--- a/source/Firebase/Crashlytics/Crashlytics.targets
+++ b/source/Firebase/Crashlytics/Crashlytics.targets
@@ -1,65 +1,83 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<PropertyGroup>
-		<_FirebaseCrashlyticsAssemblyName>Firebase.Crashlytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashlyticsAssemblyName>
-		<_FirebaseCrashlyticsItemsFolder>FCrshlytcs-8.9.1</_FirebaseCrashlyticsItemsFolder>
-		<_FirebaseCrashlyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashlyticsItemsFolder)\</_FirebaseCrashlyticsSDKBaseFolder>
-		<!-- Requires a file extension, otherwise XDB will complain  -->
-		<_FirebaseScriptName>upload-symbols.sh</_FirebaseScriptName>
-		
-		<_FirebaseCrashlyticsUploadSymbolsContinueOnError Condition="'$(FirebaseCrashlyticsUploadSymbolsContinueOnError)'=='True'">True</_FirebaseCrashlyticsUploadSymbolsContinueOnError>
-		<_FirebaseCrashlyticsUploadSymbolsContinueOnError Condition="'$(FirebaseCrashlyticsUploadSymbolsContinueOnError)'!='True'">False</_FirebaseCrashlyticsUploadSymbolsContinueOnError>
+<Project>
+  <PropertyGroup>
+    <_FirebaseCrashlyticsAssemblyName>Firebase.Crashlytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashlyticsAssemblyName>
+    <_FirebaseCrashlyticsItemsFolder>FCrshlytcs-8.9.1</_FirebaseCrashlyticsItemsFolder>
+    <_FirebaseCrashlyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashlyticsItemsFolder)\</_FirebaseCrashlyticsSDKBaseFolder>
+    <!-- Requires a file extension, otherwise XDB will complain  -->
+    <_FirebaseScriptName>upload-symbols.sh</_FirebaseScriptName>
+    
+    <_FirebaseCrashlyticsUploadSymbolsContinueOnError Condition="'$(FirebaseCrashlyticsUploadSymbolsContinueOnError)'=='True'">True</_FirebaseCrashlyticsUploadSymbolsContinueOnError>
+    <_FirebaseCrashlyticsUploadSymbolsContinueOnError Condition="'$(FirebaseCrashlyticsUploadSymbolsContinueOnError)'!='True'">False</_FirebaseCrashlyticsUploadSymbolsContinueOnError>
 
-		<!-- Properties used to upload dSYM symbols to Firebase when using Visual Studio for Mac -->
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets Condition="'$(OS)'=='Unix'">Build</_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets>
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets Condition="'$(OS)'=='Unix'"></_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets>
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets Condition="'$(OS)'=='Unix'">_FirebaseCrashlyticsUploadDSymToFirebaseOnMac</_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets>
+    <!-- Properties used to upload dSYM symbols to Firebase when using Visual Studio for Mac -->
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets Condition="'$(OS)'=='Unix'">Build</_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets>
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets Condition="'$(OS)'=='Unix'"></_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets>
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets Condition="'$(OS)'=='Unix'">_FirebaseCrashlyticsUploadDSymToFirebaseOnMac</_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets>
 
-		<!-- Properties used to upload dSYM symbols to Firebase when using Visual Studio for Windows -->
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets Condition="'$(OS)'!='Unix'"></_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets>
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets Condition="'$(OS)'!='Unix'">_SayGoodbye</_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets>
-		<_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets Condition="'$(OS)'!='Unix'">_FirebaseCrashlyticsUploadDSymToFirebaseOnWindows</_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets>
-	</PropertyGroup>
-	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildDownload Include="$(_FirebaseCrashlyticsItemsFolder)">
-			<Url>https://raw.githubusercontent.com/firebase/firebase-ios-sdk/61a1f5be795abc92bb3cf57b9ac1e854bac64196/Crashlytics/upload-symbols</Url>
-			<ToFile>$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)</ToFile>
-			<Kind>Uncompressed</Kind>
-		</XamarinBuildDownload>
-	</ItemGroup>
-	
-	<Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseMasterTarget"
-		Condition="'$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets)'!='' AND '$(FirebaseCrashlyticsUploadSymbolsEnabled)'=='True'"
-		AfterTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets)"
-		BeforeTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets)"
-		DependsOnTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets)" />
-	
-	<!-- Target to upload dSYM symbols to Firebase when using Visual Studio for Mac -->
-	<Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseOnMac" >
-		<!-- Make file executable -->
-		<Exec Command="chmod +x '$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)'" ContinueOnError="true" />
-		
-		<Message Text="Uploading dSYM to Firebase Console using Firebase $(_FirebaseScriptName) script located at $(_FirebaseCrashlyticsSDKBaseFolder)" />
-		<!-- Upload symbols to Firebase -->
-		<Exec Command="'$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)' -gsp '$(MSBuildProjectDirectory)\GoogleService-Info.plist' -p ios '$(MSBuildProjectDirectory)\$(DeviceSpecificOutputPath)$(AssemblyName).app.dSYM'"
-			ContinueOnError="$(_FirebaseCrashlyticsUploadSymbolsContinueOnError)" />
-	</Target>
+    <!-- Properties used to upload dSYM symbols to Firebase when using Visual Studio for Windows -->
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets Condition="'$(OS)'!='Unix'"></_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets>
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets Condition="'$(OS)'!='Unix'">_SayGoodbye</_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets>
+    <_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets Condition="'$(OS)'!='Unix'">_FirebaseCrashlyticsUploadDSymToFirebaseOnWindows</_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
+    <XamarinBuildDownload Include="$(_FirebaseCrashlyticsItemsFolder)">
+      <Url>https://raw.githubusercontent.com/firebase/firebase-ios-sdk/61a1f5be795abc92bb3cf57b9ac1e854bac64196/Crashlytics/upload-symbols</Url>
+      <ToFile>$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)</ToFile>
+      <Kind>Uncompressed</Kind>
+    </XamarinBuildDownload>
+  </ItemGroup>
+  <Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseMasterTarget"
+    Condition="'$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets)'!='' AND '$(FirebaseCrashlyticsUploadSymbolsEnabled)'=='True'"
+    AfterTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterAfterTargets)"
+    BeforeTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterBeforeTargets)"
+    DependsOnTargets="$(_FirebaseCrashlyticsUploadDSymToFirebaseMasterDependsOnTargets)" />
+<!-- Target to upload dSYM symbols to Firebase when using Visual Studio for Mac -->
+  <Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseOnMac" >
+    <!-- Make file executable -->
+    <Exec Command="chmod +x '$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)'" ContinueOnError="true" />
+    
+    <Message Text="Uploading dSYM to Firebase Console using Firebase $(_FirebaseScriptName) script located at $(_FirebaseCrashlyticsSDKBaseFolder)" />
+    <!-- Upload symbols to Firebase -->
+    <Exec Command="'$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)' -gsp '$(MSBuildProjectDirectory)\GoogleService-Info.plist' -p ios '$(MSBuildProjectDirectory)\$(DeviceSpecificOutputPath)$(AssemblyName).app.dSYM'"
+      ContinueOnError="$(_FirebaseCrashlyticsUploadSymbolsContinueOnError)" />
+  </Target>
+  <!-- Target to upload dSYM symbols to Firebase when using Visual Studio for Windows -->
+  <Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseOnWindows" Condition="'$(IsMacEnabled)'=='true'" >
+    <ItemGroup>
+      <_CopyFilesToMacOutput Include="$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)">
+        <TargetPath>$(_FirebaseScriptName)</TargetPath>
+      </_CopyFilesToMacOutput>
+    </ItemGroup>  
 
-	<!-- Target to upload dSYM symbols to Firebase when using Visual Studio for Windows -->
-	<Target Name="_FirebaseCrashlyticsUploadDSymToFirebaseOnWindows" Condition="'$(IsMacEnabled)'=='true'" >
-		<ItemGroup>
-			<_CopyFilesToMacOutput Include="$(_FirebaseCrashlyticsSDKBaseFolder)$(_FirebaseScriptName)">
-				<TargetPath>$(_FirebaseScriptName)</TargetPath>
-			</_CopyFilesToMacOutput>
-		</ItemGroup>	
-
-		<Message Text="Copying Firebase $(_FirebaseScriptName) script located at $(_FirebaseCrashlyticsSDKBaseFolder) to Mac host" />
-		<CopyFilesToBuildServer SessionId="$(BuildSessionId)" Files="@(_CopyFilesToMacOutput)" />
-		<!-- Make file executable -->
-		<Exec SessionId="$(BuildSessionId)" Command="chmod +x $(_FirebaseScriptName)" ContinueOnError="true" />
-		
-		<Message Text="Uploading dSYM to Firebase Console using Firebase $(_FirebaseScriptName) script" />
-		<!-- Upload symbols to Firebase -->
-		<Exec SessionId="$(BuildSessionId)" Command="'./$(_FirebaseScriptName)' -gsp './GoogleService-Info.plist' -p ios './$(DeviceSpecificOutputPath)$(AssemblyName).app.dSYM'" ContinueOnError="$(_FirebaseCrashlyticsUploadSymbolsContinueOnError)" />
-	</Target>
+    <Message Text="Copying Firebase $(_FirebaseScriptName) script located at $(_FirebaseCrashlyticsSDKBaseFolder) to Mac host" />
+    <CopyFilesToBuildServer SessionId="$(BuildSessionId)" Files="@(_CopyFilesToMacOutput)" />
+    <!-- Make file executable -->
+    <Exec SessionId="$(BuildSessionId)" Command="chmod +x $(_FirebaseScriptName)" ContinueOnError="true" />
+    
+    <Message Text="Uploading dSYM to Firebase Console using Firebase $(_FirebaseScriptName) script" />
+    <!-- Upload symbols to Firebase -->
+    <Exec SessionId="$(BuildSessionId)" Command="'./$(_FirebaseScriptName)' -gsp './GoogleService-Info.plist' -p ios './$(DeviceSpecificOutputPath)$(AssemblyName).app.dSYM'" ContinueOnError="$(_FirebaseCrashlyticsUploadSymbolsContinueOnError)" />
+  </Target>
+  <PropertyGroup>
+    <_FirebaseCrashlyticsId>FirebaseCrashlytics</_FirebaseCrashlyticsId>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)' != 'Library' OR '$(IsAppExtension)' == 'True') AND ('$(TargetFrameworks)' == '' AND '$(TargetFramework)' == '')">
+    <_NativeReference Include="$(MSBuildThisFileDirectory)..\lib\xamarinios10\Firebase.Crashlytics.resources\FirebaseCrashlytics.xcframework">
+      <_Id>$(_FirebaseCrashlyticsId)</_Id>
+    </_NativeReference>
+  </ItemGroup>
+  <Target Name="_ResolveNativeReferencesForFirebaseCrashlytics" 
+          BeforeTargets="ResolveNativeReferences"
+          Condition="('$(TargetFrameworks)' == '' AND '$(TargetFramework)' == '') OR '$(IsBindingProject)' == 'true'">
+    <ItemGroup>
+      <_NativeReference Update="@(_NativeReference)" Condition="'%(_NativeReference._Id)' == '$(_FirebaseCrashlyticsId)'">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <LinkerFlags>-lc++ -lz</LinkerFlags>
+        <Frameworks>Security SystemConfiguration</Frameworks>
+      </_NativeReference>
+      <NativeReference Include="@(_NativeReference)" />
+    </ItemGroup>
+  </Target>
 </Project>
