--- a/source/Google/Analytics/Analytics.targets
+++ b/source/Google/Analytics/Analytics.targets
@@ -1,23 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<PropertyGroup>
-		<_GoogleAnalyticsAssemblyName>Google.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleAnalyticsAssemblyName>
-		<_GoogleAnalyticsItemsFolder>GAnlytcs-3.20</_GoogleAnalyticsItemsFolder>
-		<_GoogleAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\</_GoogleAnalyticsSDKBaseFolder>
-		<_GoogleAnalyticsFrameworksBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\GoogleAnalytics-3.20.0\Frameworks\</_GoogleAnalyticsFrameworksBaseFolder>
-	</PropertyGroup>
-	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildDownload Include="$(_GoogleAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/firebase/ios/analytics/6c1e3b250fd4941d/GoogleAnalytics-3.20.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<NativeReference Include="$(_GoogleAnalyticsFrameworksBaseFolder)GoogleAnalytics.xcframework">
-			<Kind>Static</Kind>
-			<SmartLink>True</SmartLink>
-			<ForceLoad>True</ForceLoad>
-			<IsCxx>True</IsCxx>
-			<LinkerFlags>-ObjC -lz -lsqlite3</LinkerFlags>
-			<Frameworks>CoreData SystemConfiguration</Frameworks>
-		</NativeReference>
-	</ItemGroup>
+<Project>
+  <PropertyGroup>
+    <_GoogleAnalyticsAssemblyName>Google.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleAnalyticsAssemblyName>
+    <_GoogleAnalyticsItemsFolder>GAnlytcs-3.20</_GoogleAnalyticsItemsFolder>
+    <_GoogleAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\</_GoogleAnalyticsSDKBaseFolder>
+    <_GoogleAnalyticsFrameworksBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\GoogleAnalytics-3.20.0\Frameworks\</_GoogleAnalyticsFrameworksBaseFolder>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
+    <XamarinBuildDownload Include="$(_GoogleAnalyticsItemsFolder)">
+      <Url>https://dl.google.com/firebase/ios/analytics/6c1e3b250fd4941d/GoogleAnalytics-3.20.0.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <NativeReference Include="$(_GoogleAnalyticsFrameworksBaseFolder)GoogleAnalytics.xcframework">
+      <Kind>Static</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+      <IsCxx>True</IsCxx>
+      <LinkerFlags>-ObjC -lz -lsqlite3</LinkerFlags>
+      <Frameworks>CoreData SystemConfiguration</Frameworks>
+    </NativeReference>
+  </ItemGroup>
 </Project>
