--- a/source/MLKit/BarcodeScanning/BarcodeScanning.targets
+++ b/source/MLKit/BarcodeScanning/BarcodeScanning.targets
@@ -1,27 +1,26 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<PropertyGroup>
-		<_MLKitBarcodeAssemblyName>MLKit.BarcodeScanning, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_MLKitBarcodeAssemblyName>
-		<_MLKitBarcodeItemsFolder>MLKBarcode-1.6.0</_MLKitBarcodeItemsFolder>
-		<_MLKitBarcodeSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitBarcodeItemsFolder)\</_MLKitBarcodeSDKBaseFolder>
-	</PropertyGroup>
-	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildDownload Include="$(_MLKitBarcodeItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/91469daa8120529a/MLKitBarcodeScanning-1.6.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_MLKitBarcodeDownloadedItems" />
-	</ItemGroup>
-	<Target Name="_MLKitBarcodeDownloadedItems">
-		<ItemGroup>
-			<!-- From https://dl.google.com/dl/cpdc/91469daa8120529a/MLKitBarcodeScanning-1.6.0.tar.gz -->
-			<NativeReference Include="$(_MLKitBarcodeSDKBaseFolder)Frameworks\MLKitBarcodeScanning.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
-				<LinkerFlags>-lc++</LinkerFlags>
-				<Frameworks>Accelerate CoreGraphics CoreImage CoreMedia CoreVideo Foundation UIKit</Frameworks>
-			</NativeReference>
-		</ItemGroup>
-	</Target>
+﻿<Project>
+  <PropertyGroup>
+    <_MLKitBarcodeAssemblyName>MLKit.BarcodeScanning, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_MLKitBarcodeAssemblyName>
+    <_MLKitBarcodeItemsFolder>MLKBarcode-1.6.0</_MLKitBarcodeItemsFolder>
+    <_MLKitBarcodeSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitBarcodeItemsFolder)\</_MLKitBarcodeSDKBaseFolder>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
+    <XamarinBuildDownload Include="$(_MLKitBarcodeItemsFolder)">
+      <Url>https://dl.google.com/dl/cpdc/91469daa8120529a/MLKitBarcodeScanning-1.6.0.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <XamarinBuildRestoreResources Include="_MLKitBarcodeDownloadedItems" />
+  </ItemGroup>
+  <Target Name="_MLKitBarcodeDownloadedItems">
+    <ItemGroup>
+      <!-- From https://dl.google.com/dl/cpdc/91469daa8120529a/MLKitBarcodeScanning-1.6.0.tar.gz -->
+      <NativeReference Include="$(_MLKitBarcodeSDKBaseFolder)Frameworks\MLKitBarcodeScanning.framework">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <LinkerFlags>-lc++</LinkerFlags>
+        <Frameworks>Accelerate CoreGraphics CoreImage CoreMedia CoreVideo Foundation UIKit</Frameworks>
+      </NativeReference>
+    </ItemGroup>
+  </Target>
 </Project>
