--- a/source/MLKit/Core/Core.targets
+++ b/source/MLKit/Core/Core.targets
@@ -1,67 +1,87 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<PropertyGroup>
-		<_MLKitCoreAssemblyName>MLKit.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_MLKitCoreAssemblyName>
-		<_MLKitCoreItemsFolder>MLKCore-5.0.0</_MLKitCoreItemsFolder>
-		<_MLKitCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitCoreItemsFolder)\Frameworks\</_MLKitCoreSDKBaseFolder>
-		<_MLImageItemsFolder>MLImg-1.0.0beta2</_MLImageItemsFolder>
-		<_MLImageSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLImageItemsFolder)\Frameworks\</_MLImageSDKBaseFolder>
-		<_MLKitVisionItemsFolder>MLKVision-3.0.0</_MLKitVisionItemsFolder>
-		<_MLKitVisionSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitVisionItemsFolder)\Frameworks\</_MLKitVisionSDKBaseFolder>
-		<_MLKitMDDItemsFolder>MLKMDD-3.0.0</_MLKitMDDItemsFolder>
-		<_MLKitMDDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitMDDItemsFolder)\Frameworks\</_MLKitMDDSDKBaseFolder>
-	</PropertyGroup>
-	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
-		<XamarinBuildDownload Include="$(_MLKitCoreItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/47d3df4da639a85b/MLKitCommon-5.0.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_MLImageItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/abf5733b03dc0bcf/MLImage-1.0.0-beta2.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_MLKitVisionItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/504afdc2864ce1c7/MLKitVision-3.0.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_MLKitMDDItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/67fefdba5140a178/MLKitMDD-3.0.0.tar.gz</Url>
-			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_MLKitCrDownloadedItems" />
-	</ItemGroup>
-	<Target Name="_MLKitCrDownloadedItems">
-		<ItemGroup>
-			<!-- From https://dl.google.com/dl/cpdc/47d3df4da639a85b/MLKitCommon-5.0.0.tar.gz -->
-			<NativeReference Include="$(_MLKitCoreSDKBaseFolder)MLKitCommon.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
-				<LinkerFlags>-lc++ -lsqlite3 -lz</LinkerFlags>
-				<Frameworks>Foundation LocalAuthentication</Frameworks>
-			</NativeReference>
-			<!-- From https://dl.google.com/dl/cpdc/abf5733b03dc0bcf/MLImage-1.0.0-beta2.tar.gz -->
-			<NativeReference Include="$(_MLImageSDKBaseFolder)MLImage.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
-				<Frameworks>CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
-			</NativeReference>
-			<!-- From https://dl.google.com/dl/cpdc/504afdc2864ce1c7/MLKitVision-3.0.0.tar.gz -->
-			<NativeReference Include="$(_MLKitVisionSDKBaseFolder)MLKitVision.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
-				<Frameworks>Accelerate AVFoundation CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
-			</NativeReference>
-			<!-- From https://dl.google.com/dl/cpdc/67fefdba5140a178/MLKitMDD-3.0.0.tar.gz -->
-			<NativeReference Include="$(_MLKitMDDSDKBaseFolder)MLKitMDD.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
-				<LinkerFlags>-lc++</LinkerFlags>
-				<Frameworks>Accelerate AVFoundation CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
-			</NativeReference>
-		</ItemGroup>
-	</Target>
+﻿<Project>
+  <PropertyGroup>
+    <_MLKitCoreAssemblyName>MLKit.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_MLKitCoreAssemblyName>
+    <_MLKitCoreItemsFolder>MLKCore-5.0.0</_MLKitCoreItemsFolder>
+    <_MLKitCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitCoreItemsFolder)\Frameworks\</_MLKitCoreSDKBaseFolder>
+    <_MLImageItemsFolder>MLImg-1.0.0beta2</_MLImageItemsFolder>
+    <_MLImageSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLImageItemsFolder)\Frameworks\</_MLImageSDKBaseFolder>
+    <_MLKitVisionItemsFolder>MLKVision-3.0.0</_MLKitVisionItemsFolder>
+    <_MLKitVisionSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitVisionItemsFolder)\Frameworks\</_MLKitVisionSDKBaseFolder>
+    <_MLKitMDDItemsFolder>MLKMDD-3.0.0</_MLKitMDDItemsFolder>
+    <_MLKitMDDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_MLKitMDDItemsFolder)\Frameworks\</_MLKitMDDSDKBaseFolder>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
+    <XamarinBuildDownload Include="$(_MLKitCoreItemsFolder)">
+      <Url>https://dl.google.com/dl/cpdc/47d3df4da639a85b/MLKitCommon-5.0.0.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <XamarinBuildDownload Include="$(_MLImageItemsFolder)">
+      <Url>https://dl.google.com/dl/cpdc/abf5733b03dc0bcf/MLImage-1.0.0-beta2.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <XamarinBuildDownload Include="$(_MLKitVisionItemsFolder)">
+      <Url>https://dl.google.com/dl/cpdc/504afdc2864ce1c7/MLKitVision-3.0.0.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <XamarinBuildDownload Include="$(_MLKitMDDItemsFolder)">
+      <Url>https://dl.google.com/dl/cpdc/67fefdba5140a178/MLKitMDD-3.0.0.tar.gz</Url>
+      <Kind>Tgz</Kind>
+    </XamarinBuildDownload>
+    <XamarinBuildRestoreResources Include="_MLKitCrDownloadedItems" />
+  </ItemGroup>
+  <Target Name="_MLKitCrDownloadedItems">
+    <ItemGroup>
+      <!-- From https://dl.google.com/dl/cpdc/47d3df4da639a85b/MLKitCommon-5.0.0.tar.gz -->
+      <NativeReference Include="$(_MLKitCoreSDKBaseFolder)MLKitCommon.framework">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <LinkerFlags>-lc++ -lsqlite3 -lz</LinkerFlags>
+        <Frameworks>Foundation LocalAuthentication</Frameworks>
+      </NativeReference>
+      <!-- From https://dl.google.com/dl/cpdc/abf5733b03dc0bcf/MLImage-1.0.0-beta2.tar.gz -->
+      <NativeReference Include="$(_MLImageSDKBaseFolder)MLImage.framework">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <Frameworks>CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
+      </NativeReference>
+      <!-- From https://dl.google.com/dl/cpdc/504afdc2864ce1c7/MLKitVision-3.0.0.tar.gz -->
+      <NativeReference Include="$(_MLKitVisionSDKBaseFolder)MLKitVision.framework">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <Frameworks>Accelerate AVFoundation CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
+      </NativeReference>
+      <!-- From https://dl.google.com/dl/cpdc/67fefdba5140a178/MLKitMDD-3.0.0.tar.gz -->
+      <NativeReference Include="$(_MLKitMDDSDKBaseFolder)MLKitMDD.framework">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <LinkerFlags>-lc++</LinkerFlags>
+        <Frameworks>Accelerate AVFoundation CoreGraphics CoreMedia CoreVideo Foundation UIKit</Frameworks>
+      </NativeReference>
+    </ItemGroup>
+  </Target>
+  <PropertyGroup>
+    <_SSZipArchiveId>SSZipArchive</_SSZipArchiveId>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(OutputType)' != 'Library' OR '$(IsAppExtension)' == 'True') AND ('$(TargetFrameworks)' == '' AND '$(TargetFramework)' == '')">
+    <_NativeReference Include="$(MSBuildThisFileDirectory)..\lib\xamarinios10\MLKit.Core.resources\SSZipArchive.xcframework">
+      <_Id>$(_SSZipArchiveId)</_Id>
+    </_NativeReference>
+  </ItemGroup>
+  <Target Name="_ResolveNativeReferencesForMLKitCore" 
+          BeforeTargets="ResolveNativeReferences"
+          Condition="('$(TargetFrameworks)' == '' AND '$(TargetFramework)' == '') OR '$(IsBindingProject)' == 'true'">
+    <ItemGroup>
+      <_NativeReference Update="@(_NativeReference)" Condition="'%(_NativeReference._Id)' == '$(_SSZipArchiveId)'">
+        <Kind>Framework</Kind>
+        <SmartLink>True</SmartLink>
+        <ForceLoad>True</ForceLoad>
+        <LinkerFlags>-lz -liconv</LinkerFlags>
+      </_NativeReference>
+      <NativeReference Include="@(_NativeReference)" />
+    </ItemGroup>
+  </Target>
 </Project>
